force-app/main/default/objects/Component_Attribute__c.object
<CustomObject>
    <description>Represents the benefits which make up a plan component. Also signifies any rate driving or key benefits for a component</description>
    <fields>
        <fullName>Attribute_Category__c</fullName>
        <formula>TEXT(Attribute__r.Attribute_Category__c)</formula>
        <label>Attribute Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Code__c</fullName>
        <formula>Attribute__r.Name</formula>
        <label>Attribute Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Display_Name__c</fullName>
        <formula>Attribute__r.Attribute_Display_Name__c</formula>
        <label>Attribute Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Long_Code__c</fullName>
        <formula>Attribute__r.Attribute_Long_Code__c</formula>
        <label>Attribute Long Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Name__c</fullName>
        <formula>Attribute__r.Attribute_Name__c</formula>
        <label>Attribute Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <label>Attribute</label>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipName>Product_Component_Attributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Component_Attribute_Type__c</fullName>
        <label>Component Attribute Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add-On</fullName>
                    <default>true</default>
                    <label>Add-On</label>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Component_Name__c</fullName>
        <formula>Plan_Component__r.Name</formula>
        <label>Component Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Type__c</fullName>
        <formula>TEXT(Plan_Component__r.Product_Component_Type__c)</formula>
        <label>Component Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Key_Benefit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Key Benefit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Rate_Impacting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if an attribute is rate impacting or not</description>
        <inlineHelpText>Defines if an attribute is rate impacting or not</inlineHelpText>
        <label>Is Rate Impacting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Component__c</fullName>
        <label>Plan Component</label>
        <referenceTo>Plan_Component__c</referenceTo>
        <relationshipLabel>Component Attributes</relationshipLabel>
        <relationshipName>Product_Component_Attributes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Plan_Family__c</fullName>
        <formula>CASESAFEID(Plan_Component__r.Plan_Family__c)</formula>
        <label>Plan Family</label>
        <type>Text</type>
    </fields>
    <label>Component Attribute</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <displayFormat>CA-{000000000}</displayFormat>
        <label>Attribute Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Component Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>